# ClevelandBusinessMentoring

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  audit-dev-vs-prod-links.md  generate_prd_docx.js  pyproject.toml  ssh  ssh.pub  test.db
ComparisonDocs/: CBM_WordPress_Hosting_Options.pptx  VideoConferencing_Comparison.docx  domain-strategy.docx
Implementation Docs/: .gitkeep  CBM Test Instance-CRM-Reference.docx  CBM Test Instance-CRM-Reference.md
PRDs/: .$CBM-PRD-CRM-Mentor-Process-4.1-4.7.drawio.bkp  .~lock.CBM-PRD-Master.docx#  CBM-Consolidated-Design.md  CBM-Decisions-Log.docx  CBM-Domain-PRD-ClientRecruiting.md  CBM-Domain-PRD-Fundraising.md  CBM-Domain-PRD-MentorRecruitment.md  CBM-Domain-PRD-Mentoring.md  CBM-Entity-Inventory.docx  CBM-EspoCRM-HowTo-NEW.docx  CBM-EspoCRM-HowTo.docx  CBM-EspoCRM-HowTo.odt  CBM-EspoCRM-Navigation-Design.docx  CBM-Master-PRD.docx  CBM-Master-PRD.md  CBM-PRD-CRM-Client (1).docx  CBM-PRD-CRM-Client-Process-4.1-4.3.drawio  CBM-PRD-CRM-Client.docx  CBM-PRD-CRM-Deploy.docx  CBM-PRD-CRM-Implementation.docx  CBM-PRD-CRM-Mentor.docx  CBM-PRD-CRM-Partners.docx  CBM-PRD-CRM.docx  CBM-PRD-Forms.docx  CBM-PRD-Master.docx  CBM-PRD-Security.docx  CBM-PRD-Website.docx  CBM-PRD-Website.md  EspoCRM_Architecture_Guide.docx  Google workspace-checklist.docx  RECONCILIATION-2026-06-10-profile-entity-backport.md  RECONCILIATION-2026-06-24-dev-prod-parity.md  SESSION-PROMPT-Entity-Discovery.md  Security Conversation.odt  UPDATE-PROMPT-Domain-PRD-Entity-Relationships-Propagation.md  UPDATE-PROMPT-MN-CR-CrossDomain-Workflows.md  (+3 more)
(+575 files in other folders)
